chat: fix message overflow on small resolutions

--- a/discord.user.styl
+++ b/discord.user.styl
@@ -786,7 +786,7 @@ if ( next == 1 ) {
             /// -> Messages.
             +w(0 'messages-') {
                 > div {
-                    width: calc(100% + 32px);
+                    width: 100%;
                     max-width: chat_width;
                     margin-left: auto;
                     margin-right: auto;
